nastavak optiizacije domenskih modela